@@ -125,6 +125,8 @@
              readjust (readjust partial cross sections by the sum)</a>
         <li> <a href="ope3.html#changeint">
              changeint (modify interpolation law)</a>
+        <li> <a href="ope3.html#changeqval">
+             changeqval (modify Q-value)</a>
         </ul>
     <li> <a href="ope3.html#MF6">
          Miscellaneous MF6 Operations
