@@ -75,6 +75,7 @@ Currently only two group structures and two weighting functions are implemented.
 Ng = 0: SAND-IIa 640 energy group structure
 Ng = 1: LANL 70 energy group structure
 Ng = 2: VITAMINE-J 175 energy group structure
+Ng = 3: SAND-IIa 725 energy group structure (up to 60 MeV)
 </pre>
 
 <pre id="prg">
