@@ -497,6 +497,7 @@ Record ENDFReadTAB1       (ifstream *, ENDF *);
 Record ENDFReadTAB2       (ifstream *, ENDF *);
 Record ENDFReadTAB21      (ifstream *, ENDF *);
 Record ENDFReadTAB22      (ifstream *, ENDF *);
+Record ENDFReadTAB2L      (ifstream *, ENDF *);
 Record ENDFReadINTG       (ifstream *, ENDF *);
 
 void   ENDFWriteTPID      (ENDFDict *);
@@ -510,6 +511,7 @@ Record ENDFWriteTAB1      (ENDF *);
 Record ENDFWriteTAB2      (ENDF *);
 Record ENDFWriteTAB21     (ENDF *);
 Record ENDFWriteTAB22     (ENDF *);
+Record ENDFWriteTAB2L     (ENDF *);
 Record ENDFWriteINTG      (ENDF *);
 void   ENDFWriteSEND      (ENDF *);
 void   ENDFWriteFEND      (int);
@@ -542,6 +544,7 @@ int    ENDFReadMF3        (ifstream *, ENDF *, const int);
 int    ENDFReadMF4        (ifstream *, ENDF *, const int);
 int    ENDFReadMF5        (ifstream *, ENDF *, const int);
 int    ENDFReadMF6        (ifstream *, ENDF *, const int);
+int    ENDFReadMF7        (ifstream *, ENDF *, const int);
 int    ENDFReadMF8        (ifstream *, ENDF *, const int);
 int    ENDFReadMF9        (ifstream *, ENDF *, const int);
 int    ENDFReadMF10       (ifstream *, ENDF *, const int);
@@ -562,6 +565,7 @@ void   ENDFWriteMF3       (ENDF *);
 void   ENDFWriteMF4       (ENDF *);
 void   ENDFWriteMF5       (ENDF *);
 void   ENDFWriteMF6       (ENDF *);
+void   ENDFWriteMF7       (ENDF *);
 void   ENDFWriteMF8       (ENDF *);
 void   ENDFWriteMF9       (ENDF *);
 void   ENDFWriteMF10      (ENDF *);
